--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9003",
+    "dev:stable": "next dev -p 9003",
+    "dev:clean": "next dev -p 9003",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 9003",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
