--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,8 @@ django-cors-headers==4.7.0
 django-environ==0.12.0
 django-redis==6.0.0
 psycopg2-binary==2.9.10
-djangorestframework-authtoken==1.2.0
 django-filter==25.1
+Pillow==10.4.0
+gunicorn==21.2.0
+whitenoise==6.6.0
+dj-database-url==2.1.0
