feat: geolocation, city filtering, and local image caching\n\nBackend:\n- Add restaurant geolocation migrations and coordinate filters\n- Implement city bounding boxes + alias normalization in feed\n- Include empty restaurants (placeholder cards) in city feed pages\n- Add Restaurant.image_file with signal auto-download from image_url\n- Add backfill_restaurant_images management command\n- Add booking hold model/migration adjustments and nullable diner ref\n- Improve serializers & tests for feed city and slot merging\n- Add purge_expired_offers management command\n\nFrontend:\n- Update feed consumption for city filter + normalized equality\n- Deduplicate restaurant cards and fix React key collisions\n- Enhance booking & restaurant pages (slots, timeslot chips)\n- Add layout/nav/mobile bottom bar adjustments and theming updates\n- Refine API layer (api.ts, booking-api.ts) & config (next.config.ts)\n- CSS/global style and theme-init enhancements\n\nMisc:\n- Add PowerShell start script, update batch starters\n- Update .env examples and admin registration\n\nBREAKING CHANGE: Feed response now may include placeholder cards without offer_id when including empty restaurants for a city.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,36 @@
-# Production Environment Variables for DigitalOcean
+############################################################
+# Example Environment Variables (Backend + Frontend)
+# Copy to .env (backend/core/.env) and frontend/.env.local as needed
+############################################################
 
-# Django Settings
-SECRET_KEY=your-secret-key-here
-DEBUG=False
-ALLOWED_HOSTS=your-domain.com,*.ondigitalocean.app
+# === Django Backend ===
+SECRET_KEY=change-me
+DEBUG=True
 
-# Database (will be provided by DigitalOcean)
-DATABASE_URL=postgresql://username:password@host:port/database
+# Comma-separated hostnames / IPs the backend will accept. Include LAN IP for other devices on Wi-Fi.
+# Example LAN_IP below – replace with the output of ipconfig (IPv4 Address).
+ALLOWED_HOSTS=localhost,127.0.0.1,LAN_IP
 
-# CORS Settings
-CORS_ALLOWED_ORIGINS=https://your-frontend-domain.com
+# CORS: during local dev you can allow all OR specify the frontend origins.
+# If you keep DEBUG=True you may rely on CORS_ALLOW_ALL_ORIGINS=True (set below) for simplicity.
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://LAN_IP:3000
+CORS_ALLOW_ALL_ORIGINS=True
 
-# Django Log Level
+# Database (set only if using Postgres in prod)
+# DATABASE_URL=postgresql://username:password@host:port/database
+
 DJANGO_LOG_LEVEL=INFO
 
-# Next.js Frontend
-NEXT_PUBLIC_API_URL=https://your-backend-domain.com
+# === Frontend (Next.js) ===
+# Provide backend base URL (no trailing slash required; our code trims it). Use LAN IP so phones/tablets can reach it.
+NEXT_PUBLIC_BACKEND_API_URL=http://LAN_IP:8000
+
+# In production replace LAN_IP with your public domain and set DEBUG=False above, also adjust CORS_ALLOWED_ORIGINS.
+
+############################################################
+# Notes:
+# 1. Replace LAN_IP everywhere with your actual local network IP (e.g. 192.168.1.42).
+# 2. Start Django bound to 0.0.0.0:  python manage.py runserver 0.0.0.0:8000
+# 3. Ensure Windows Firewall allows inbound on 8000.
+# 4. Restart Next.js after changing .env.local.
+############################################################
