--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9003",
-    "dev:stable": "next dev -p 9003",
-    "dev:clean": "next dev -p 9003",
+    "dev": "next dev --turbopack -p 9003 -H 0.0.0.0",
+    "dev:stable": "next dev -p 9003 -H 0.0.0.0",
+    "dev:clean": "next dev -p 9003 -H 0.0.0.0",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start -p 9003",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+  "lint": "next lint",
+  "typecheck": "tsc --noEmit",
+  "test": "vitest run --exclude e2e/**",
+  "e2e": "playwright test"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
@@ -46,7 +48,9 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.13.0",
-    "lucide-react": "^0.475.0",
+  "lucide-react": "^0.475.0",
+  "leaflet": "^1.9.4",
+  "react-leaflet": "^4.2.1",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -56,7 +60,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+  "zod": "^3.24.2",
+  "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -65,6 +70,8 @@
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+  "typescript": "^5",
+  "@playwright/test": "^1.48.0",
+  "vitest": "^2.0.5"
   }
 }
